# full-stack-coding-interview

./: .env  .env.example  .gitignore  AI-INSTRUCTIONS.md  AI-PROMPT.md  CLAUDE.md  Clever Photo Gallery.postman_collection.json  DRF-API.md  Dockerfile  FinalConsiderations.md  Gemfile  Procfile  README.md  docker-compose.yml  index.html  manage.py  package-lock.json  package.json  requirements.txt  tailwind.config.js  tsconfig.json  vite.config.ts
back/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
back/app/: config.py  main.py
backend/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Gemfile  README.md  conftest.py  cookies.txt  db.sqlite3  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run.py
backend/app/: config.py  main.py
backend/authentication/: serializers.py  urls.py  views.py
backend/backend/: pagination.py  settings.py  settings_test.py  urls.py
backend/clever/: asgi.py  settings.py  urls.py  wsgi.py
backend/config/: application.rb  credentials.yml.enc  database.yml  routes.rb  settings.py  token.py  urls.py
backend/core/: settings.py  urls.py
backend/data/: photo_gallery.db
backend/db/: schema.rb  seeds.rb
backend/health_check/: views.py
backend/instance/: app.db
backend/photo_gallery/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
backend/photo_gallery_backend/: asgi.py  settings.py  wsgi.py
backend/photos/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py  viewsets.py
config/: routes.rb  (+1 more)
(+621 files in other folders)
